--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>亚马逊商城项目</title>
+<!--    <title>亚马逊商城项目</title>-->
     <meta name="description"
           content="亚马逊-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!"/>
     <meta name="Keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>amazon</title>
+<!--    <title>amazon</title>-->
   </head>
   <body>
     <div id="app"></div>
